# homelab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docker-compose-validate.yml  release.yml  validate-aerospace-config.yml
aerospace/: README.md  aerospace.toml
docker-compose/actual-budget/: docker-compose.yml
docker-compose/duplicati/: docker-compose.yml
docker-compose/immich/: docker-compose.yml  stack.env
docker-compose/jellyfin-arr-stack/: docker-compose.yml
docker-compose/nextcloud-aio/: docker-compose.yml
docker-compose/nextcloud-reverse-proxy-tailscale/: README.md
docker-compose/nginx-proxy-manager/: docker-compose.yml
docker-compose/openclaw/: docker-compose.yml  stack.env
docker-compose/pihole/: docker-compose.yml
docker-compose/uptime-kuma/: docker-compose.yml
docker-compose/vaultwarden/: docker-compose.yml
docker-compose/watchtower/: docker-compose.yml
docs/: CLOUDFLARE.md  NETWORKING.md  OPERATIONS.md  README.md  SETUP.md  VARIABLES.md
docs/stacks/: actual-budget.md  duplicati.md  immich.md  jellyfin-arr-stack.md  nextcloud-aio.md  nginx-proxy-manager.md  openclaw.md  pihole.md  portainer.md  uptime-kuma.md  vaultwarden.md  watchtower.md
homelab_caddy/: nexcloud.md
kitty/: README.md  kitty.conf  kitty.conf.bak
lazygit/: README.md  config.yml
nvim/: README.md  lazy-lock.json  lazyvim.json
nvim/colors/: jet_brains_darcula.lua
tmux/: .tmux.conf  README.md
utils/de-duplication/: dedupe_safe.py  (+1 more)
zshrc/: .example.secrets.zsh  .latex.zsh  .secrets.zsh  .zshrc  README.md
(+28 files in other folders)
