[project]
name = "homelab"
version = "0.1.0"
description = "Homelab infrastructure, stacks, and operations source of truth"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "python-semantic-release>=10.5.3",
]

[tool.semantic_release]
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
version_toml = [
  "pyproject.toml:project.version",
]
commit_parser = "conventional"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true
